# new

./: .gitignore  Dockerfile  README.md  ecommerce_env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.sh
server/: app.py
