[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-env"
version = "0.1.0"
description = "E-Commerce Catalog Manager OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "pydantic",
    "openai",
    "uvicorn",
    "fastapi"
]

[project.scripts]
server = "server.app:main"